# leones

./: .gitignore  Architecture_Today.md  BestPractices_Today.md  Documentacion_Funcionalidades_principales.md  Documentation_DataModel.md  Documentation_improvements_ToBe.md  README_Today.md  app.db  create_uploaded_files_table.py  leones.db  pyproject.toml
app/: __main__.py  config.py
app/Documents/: Detalles_Funcionalidades_Metasketch.md  MVP Metasketch MRS_funcional.docx  MVP_Metasketch_MRS_funcional.md  Matriz_Trazabilidad_Metasketch.md  Metasketch_experimento_Vibecoding.md  Plantilla_Funcional v2.md  Plantilla_Funcional.docx  Plantilla_Funcional.md
app/api/: auth.py  chat.py  chat_ia_panel.py  chat_sugerencias.py  chat_sugerencias_panel.py  document.py  export.py  logout.py  (+5 more)
static/: document.js  exportar_markdown.js  generar_funcional.js  generar_funcional_icons.js  guardar_markdown.js
templates/: arbol_contenidos.html  base.html  chat_result.html  chat_sugerencias.html  document_list.html  funcional_result.html  funcional_result_y_indice.html  index.html  login.html  panel_funcional.html  panel_funcional_vacio.html  panel_loading_funcional.html  upload.html  upload_result.html
uploaded_docs/: Documento_de_Analisis_Funcional_Metasketch_v2 (1).docx  MVP Metasketch MRS_funcional-Margarita OK.docx  Preguntas pendientes para reunión de análisis.docx  ~$- VALIDACIONES REG01 Javier.docx  ~$- VALIDACIONES REG01 v1,0.docx  ~$- VALIDACIONES REG01 v1.02.docx  ~$- VALIDACIONES REG01.docx  ~$- VALIDACIONES REG03 v2.00.docx  ~$CAMBIOS Recepción Validaciones TRF v1.xlsx
(+26 files in other folders)
